# ICON

./: AUTHORS.TXT  Makefile.in  README.md  RELEASE_NOTES.md  REUSE.toml  collect.extra-libs.in  config.h.in  configure  configure.ac  depgen.c.config.in  depgen.f90.config.in  deplist.config.in  icon.mk.in  inlib.mk.in  make_runscripts  mtime_test.tar  rrtm_taumol10.F90  rrtm_taumol11.F90  rrtm_taumol12.F90  rrtm_taumol13.F90  rrtm_taumol14.F90  rrtm_taumol15.F90  rrtm_taumol16.F90  rrtm_taumol5.F90  rrtm_taumol6.F90  rrtm_taumol7.F90  rrtm_taumol8.F90  rrtm_taumol9.F90  srtm_cmbgb16.F90  srtm_cmbgb17.F90  srtm_cmbgb18.F90  srtm_cmbgb19.F90  srtm_cmbgb20.F90  srtm_cmbgb21.F90  srtm_cmbgb22.F90  srtm_cmbgb23.F90  srtm_cmbgb24.F90  srtm_cmbgb25.F90  srtm_cmbgb26.F90  srtm_cmbgb27.F90
LICENSES/: LicenseRef-ACM.txt
config/: hal.cpu
config/buildbot/: alps_mch_test_cpu  alps_mch_test_gpu  balfrin_cpu_nvidia  balfrin_gpu_nvidia  balfrin_gpu_nvidia_mixed  booster_nvhpc_ompi  booster_nvhpc_psmpi  breeze_gcc  breeze_gcc_openmp  breeze_intel  breeze_intel_openmp  breeze_nag  buildModel  buildModel.sbatch  cluster_intel_ompi  cluster_intel_psmpi  cluster_nvhpc_psmpi  dwd_cray  dwd_fcns.sh  dwd_nec  dwd_nec_hybrid  dwd_nec_yac2  horeka_cpu_nvhpc  horeka_gcc  horeka_gpu_nvhpc  horeka_intel  levante_aurora  levante_coverage  levante_cpu_nvhpc  levante_gcc  levante_gcc_hybrid  levante_gpu_nvhpc  levante_gpu_validation  levante_intel  levante_intel_hybrid  levante_intel_hybrid_mixed  levante_intel_pio  levante_nag  levante_nag_serial  listExperiments  (+7 more)
config/cineca/: leo.common.nvhpc-23.1  leo.cpu.nvhpc-23.1  leo.gpu.nvhpc-23.1
config/clm/: levante.intel-2021.5.0_compflags.readme  levante.intel-2021.5.0_ecrad_2.6.4-nwp4_lessoptim  levante.intel-2021.5.0_ecrad_2.6.5_optimfpe
config/csc/: README.md  exec.lumi.container.cce-16.0.1.1  lumi.cpu.container.cce-16.0.1.1  lumi.cpu.native.cce-16.0.1  lumi.gpu.container.cce-16.0.1.1  lumi.gpu.native.cce-16.0.1
config/cscs/: SPACK_TAG_ALPS  SPACK_TAG_MCH  alps_mch.cpu.nvidia  alps_mch.cpu.nvidia_mixed  alps_mch.gpu.nvidia  alps_mch.gpu.nvidia_mixed  build_and_test_mch_prod  create_sh_env  spack_install  todi.cpu.nvhpc  todi.gpu.nvhpc
config/dkrz/: aurora.VE.nfort-3.5.1_mpi-3.2.0  aurora.VE.nfort-4.0.0_mpi-3.2.0  aurora.VE.nfort-5.0.1_mpi-3.4.0  aurora.VH.gcc_mpi-3.2.0  aurora.VH.gcc_mpi-3.4.0  levante.cpu.nvhpc-22.5  levante.cpu.nvhpc-23.9  levante.gcc-11.2.0  levante.gpu.nvhpc-22.5  levante.gpu.nvhpc-23.9  levante.intel-2021.5.0  levante.nag-7.1.7101
config/dwd/: gpnl.cpu.nvidia-22.7  gpnl.gpu.nvidia-22.7  inlinelist.sh  linuxWS.cpu.nvidia-22.7  linuxWS.gcc  linuxWS.gpu.nvidia-22.7  rcl.VE.bb-dwd_nec  rcl.VE.bb-dwd_nec_hybrid  rcl.VE.bb-dwd_nec_yac2  rcl.VE.nfort-5.1.0_mpi-3.5_oper  rcl.VE.nfort-5.1.0_mpi-3.5_oper_ftrace  rcl.VH.bb-dwd_nec  rcl.VH.bb-dwd_nec_hybrid  rcl.VH.bb-dwd_nec_yac2  rcl.VH.gcc-11.2.0_mpi-3.5_oper  rcl.VH.gcc-12.3.0_mpi-3.5_oper  rcl.VH.gcc-9.2.0_mpi-3.5_oper
config/ethz/: SPACK_TAG_EULER
config/generic/: README.md  gcc
config/hlrs/: hawk.intel_21_mpt  hawk.intel_mpt_clm_optim  hunter.cpe_clm
config/jsc/: README.md  juwels_booster.gpu.ompi_nvhpc-23.1  juwels_booster.gpu.psmpi_nvhpc-23.1  juwels_cluster.cpu.psmpi_nvhpc-23.1  juwels_cluster.psmpi_intel-2022.1.0
config/kit/: hk.common.nvhpc-23.9  hk.cpu.gnu-13-openmpi-5.0  hk.cpu.intel-2023-openmpi-5.0  hk.cpu.nvhpc-23.9  hk.gpu.nvhpc-23.9  hk.intel-2022-openmpi-4.0  module_switcher
config/mpim/: bullseye.mpich.cpu.nvhpc-23.7.0  bullseye.mpich.gcc-12.1.0  bullseye.mpich.gpu.nvhpc-23.7.0  bullseye.mpich.intel-2021.6.0  bullseye.mpich.nag-7.2.7200  bullseye.mpich.oneapi-2022.1.0  bullseye.nompi.cpu.nvhpc-23.7.0  bullseye.nompi.gcc-12.1.0  bullseye.nompi.intel-2021.6.0  bullseye.nompi.nag-7.2.7200  bullseye.nompi.oneapi-2022.1.0  bullseye.openmpi.cpu.nvhpc-23.7.0  bullseye.openmpi.gcc-12.1.0  bullseye.openmpi.intel-2021.6.0  bullseye.openmpi.nag-7.2.7200  bullseye.openmpi.oneapi-2022.1.0
data/: dmin_wetgrowth_graupelhail_cosmo7.nc
doc/: Namelist_overview.tex  Quick_Start.md  icon_nml_tables.tex  icon_ocean_nml_tables.tex  icon_waves_nml_tables.tex  incompatible_changes.tex  mo_expression_doc.tex
doc/config/: icon-config-doc-depgraph.dot  (+1 more)
etc/: aero_provider.py  o3_cmip_provider.py
m4/: acx_fc_attribute_contiguous.m4  acx_fortran_check_integer_expression.m4  ax_compare_version.m4
run/: Makefile  README  add_START_MODEL_function  add_refgen_routines  add_required_atmo_hydrostatic_files  add_required_atmo_non-hydrostatic_files  add_required_ocean_files  add_run_routines  add_run_routines.in  ana_varnames_map_file.txt  collect.set-up.info.in  create-hostfile.py  create_target_header  dict.echam_tpe.mpim  dict.extpar  dict.icoham.mpim  dict.icon.hdcp2  dict.iconam.mpim  dict.iconam.mpim_fuernwp  dict.latbc  dict.output.dwd  dict.output.mch  exec.iconrun  exp.aes_bubble  exp.aes_bubble_land  exp.aes_bubble_land_test  exp.aes_bubble_land_tmx  exp.aes_bubble_test  exp.aes_bubble_tmx  exp.amip  exp.art_oem  exp.atm_amip_les_test  exp.atm_ape_test  exp.atm_cph_nest_R2B4  exp.atm_dyamond_nwp_rceTorus  exp.atm_energy_test  exp.atm_heldsuarez  exp.atm_heldsuarez_test  exp.atm_nwp_jsbach-C  exp.atm_nwp_jsbach_test  (+94 more)
support/: dummy_hip_events.hip.cc  index_list.cu  index_list.h  index_list.hip.cc  mo_util_uuid.f90  mo_util_uuid_types.f90  util_multifile_restart.c  util_uuid.c  util_uuid.h
test/microphysics_1mom_schemes/: CMakeLists.txt  granule.jinja  input-data.nc.md5  microphysics_1mom_driver.f90
test/microphysics_1mom_schemes/cmake/Modules/: FindNetCDF.cmake
test/microphysics_1mom_schemes/reference/: cloudice2mom_1_ref  cloudice2mom_2_ref  cloudice2mom_3_ref  cloudice_1_ref  cloudice_2_ref  cloudice_3_ref  graupel_1_ref  graupel_2_ref  graupel_3_ref  kessler_1_ref
test/microphysics_1mom_schemes/tolerance/: cloudice2mom_1  cloudice2mom_2  cloudice2mom_3  cloudice_1  cloudice_2  cloudice_3  graupel_1  graupel_2  graupel_3  kessler_1
utils/: IconWrapper.cmake  filelock  icon_sorted_deps.sh  id++  move_to_prefix.sh  patch_namelist  pvcs.py  timewarp
(+1883 files in other folders)
